// sonic.proto describes the message format for streaming service provided by SONiC
syntax = "proto3";

import "github.com/openconfig/gnmi/proto/gnmi/gnmi.proto";

package gnmi.sonic;

// target - the name of the target for which the path is a member. Only set in prefix for a path.
enum Target {
  option allow_alias = true;
  APPL_DB         = 0;
  ASIC_DB         = 1;
  COUNTERS_DB     = 2;
  CONFIG_DB       = 4;
  // PFC_WD_DB shares the the same db number with FLEX_COUNTER_DB
  PFC_WD_DB       = 5;
  FLEX_COUNTER_DB = 5;
  STATE_DB        = 6;
  BMP_STATE_DB    = 20;
  // For none-DB data
  OTHERS          = 100;
}

message SupportedBundleVersions {
  string bundle_version = 1;
  string base_version = 2;
}
message BundleVersion {
  string version = 1;
}

